// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default render 1`] = `
<p
  className="Instructions"
>
  
   Use the 
  <strong>
    left
  </strong>
   and 
  <strong>
    right
  </strong>
   arrow keys to move your pastry bag, and the 
  <strong>
    spacebar
  </strong>
   (or click anywhere on the board) to shoot frosting.
</p>
`;

exports[`Small render 1`] = `
<p
  className="Instructions small"
>
  <strong>
    HINT:
  </strong>
   Use the 
  <strong>
    left
  </strong>
   and 
  <strong>
    right
  </strong>
   arrow keys to move your pastry bag, and the 
  <strong>
    spacebar
  </strong>
   (or click anywhere on the board) to shoot frosting.
</p>
`;
